argocd/blog/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog-deployment
          image: nei7/blog:master
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: 410m
              memory: 1024Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

      imagePullSecrets:
        - name: docker-registry
