argocd/blog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 3000
